--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-toastify": "^8.0.0"
+    "react-toastify": "^8.0.0",
+    "reactstrap": "^8.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
