--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.21.4",
     "js-cookie": "^3.0.1",
+    "ra-data-simple-rest": "^3.18.0",
     "react": "^17.0.0",
+    "react-admin": "^3.18.1",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.0",
