--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.0",
-    "reactstrap": "^8.10.0"
+    "reactstrap": "^8.10.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
