--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,13 @@
     "titleBar.activeBackground": "#0000ff",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#0000ff99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "editorGroup.border": "#3333ff",
+    "panel.border": "#3333ff",
+    "sash.hoverBorder": "#3333ff",
+    "sideBar.border": "#3333ff",
+    "statusBarItem.remoteBackground": "#0000ff",
+    "statusBarItem.remoteForeground": "#e7e7e7"
   },
   "peacock.color": "blue",
   "emmet.includeLanguages": {
