--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.4",
+    "date-fns": "^2.0.0-beta.5",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "ra-data-simple-rest": "^3.18.0",
     "react": "^17.0.0",
     "react-admin": "^3.18.1",
@@ -19,7 +24,8 @@
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.5.1"
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "vite": "^2.5.1",
+    "vite-plugin-rewrite-all": "^0.1.2"
   }
 }
