--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#3333ff",
+    "activityBar.activeBackground": "#858588",
     "activityBar.activeBorder": "#600000",
-    "activityBar.background": "#3333ff",
+    "activityBar.background": "#858588",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
     "activityBarBadge.background": "#600000",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#0000ff",
+    "statusBar.background": "#858588",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#3333ff",
-    "titleBar.activeBackground": "#0000ff",
+    "statusBarItem.hoverBackground": "#858588",
+    "titleBar.activeBackground": "#858588",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#0000ff99",
+    "titleBar.inactiveBackground": "#858588",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "editorGroup.border": "#3333ff",
-    "panel.border": "#3333ff",
-    "sash.hoverBorder": "#3333ff",
-    "sideBar.border": "#3333ff",
-    "statusBarItem.remoteBackground": "#0000ff",
+    "editorGroup.border": "#858588",
+    "panel.border": "#858588",
+    "sash.hoverBorder": "#858588",
+    "sideBar.border": "#858588",
+    "statusBarItem.remoteBackground": "#858588",
     "statusBarItem.remoteForeground": "#e7e7e7"
   },
   "peacock.color": "blue",
